--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "active-reggae",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "personalized-screw",
    "metadata": {},
    "outputs": [],
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "abroad-pontiac",
    "metadata": {},
    "outputs": [],
@@ -213,10 +213,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "israeli-street",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[2.96914436e-05]],\n",
+       "\n",
+       "       [[6.61820551e-05]],\n",
+       "\n",
+       "       [[1.10825498e-04]],\n",
+       "\n",
+       "       [[2.73965546e-06]],\n",
+       "\n",
+       "       [[9.34246358e-01]],\n",
+       "\n",
+       "       [[9.00369244e-05]],\n",
+       "\n",
+       "       [[3.78124723e-04]],\n",
+       "\n",
+       "       [[6.47432241e-02]],\n",
+       "\n",
+       "       [[1.70825249e-04]],\n",
+       "\n",
+       "       [[1.61992509e-04]]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "forward(xTrain[0])"
    ]
