Fixed forward pass, optimized fuctions and aligned with Lenet-5.

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 163,
    "id": "listed-diana",
    "metadata": {},
    "outputs": [],
@@ -23,12 +23,12 @@
     "import cmath\n",
     "import sys\n",
     "import random\n",
-    "from mnist import MNIST"
+    "from mnist.loader import MNIST"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 164,
    "id": "successful-treasurer",
    "metadata": {},
    "outputs": [],
@@ -42,26 +42,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 165,
    "id": "correct-benefit",
    "metadata": {},
    "outputs": [],
    "source": [
     "def convolve(im, kernel, bias=0):\n",
     "    kernelSize = len(kernel)\n",
-    "    ret = (np.zeros((len(im) - 2*(kernelSize//2), len(im[0]) - 2*(kernelSize//2))))\n",
-    "    for i in range(kernelSize//2, len(im) - kernelSize//2):\n",
-    "        for j in range(kernelSize//2, len(im[0]) - kernelSize//2):\n",
-    "            for k in range(kernelSize):\n",
-    "                for l in range(kernelSize):\n",
-    "                    ret[i - kernelSize//2][j - kernelSize//2] += im[i - kernelSize//2 + k][j - kernelSize//2 + l]*kernel[k][l]\n",
+    "    size = im.shape\n",
+    "    ret = (np.zeros((size[0] - 2*(kernelSize//2), size[1] - 2*(kernelSize//2))))\n",
+    "    for i in range(kernelSize//2, size[0] - kernelSize//2):\n",
+    "        for j in range(kernelSize//2, size[1] - kernelSize//2):\n",
+    "            ret[i - kernelSize//2][j - kernelSize//2] = np.sum(np.dot(kernel,im[i-kernelSize//2:i-kernelSize//2+kernelSize,j-kernelSize//2:j-kernelSize//2+kernelSize]))\n",
     "    ret = ret + bias\n",
     "    return ret"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 166,
    "id": "attempted-utility",
    "metadata": {},
    "outputs": [],
@@ -70,15 +69,13 @@
     "    ret = np.zeros(((len(im)//2), len(im[0])//2))\n",
     "    for i in range(len(ret)):\n",
     "        for j in range(len(ret[0])):\n",
-    "            for p in range(k):\n",
-    "                for l in range(k):\n",
-    "                    ret[i][j] += im[i*2 + p][j*2 + l]/(k**2)\n",
+    "            ret[i][j] = np.mean(im[i*2:i*2+k, j*2:j*2+k])\n",
     "    return ret"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 167,
    "id": "defensive-grenada",
    "metadata": {},
    "outputs": [],
@@ -89,18 +86,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 168,
+   "id": "cef19200",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize(im):\n",
+    "    return np.where(im==0,-0.1,1.175)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 169,
    "id": "developing-fraud",
    "metadata": {},
    "outputs": [],
    "source": [
     "def preprocess(im):\n",
-    "    return np.uint8(np.pad(im, (2, 2)))"
+    "    return normalize(np.pad(im, (2, 2)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 170,
    "id": "heated-albany",
    "metadata": {},
    "outputs": [],
@@ -110,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 171,
    "id": "active-reggae",
    "metadata": {},
    "outputs": [],
@@ -132,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 172,
    "id": "personalized-screw",
    "metadata": {},
    "outputs": [],
@@ -147,16 +155,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 173,
    "id": "abroad-pontiac",
    "metadata": {},
    "outputs": [],
    "source": [
     "def forward(im):\n",
+    "    A = 1.7159\n",
     "    # Convolution 1\n",
     "    ret1 = []\n",
     "    for i in range(len(conv[0])):\n",
-    "        ret1.append(np.tanh(convolve(im, conv[0][i], bConv[0][i])))\n",
+    "        ret1.append(A*np.tanh(2*convolve(im, conv[0][i], bConv[0][i])/3))\n",
     "        \n",
     "    # Average pooling\n",
     "    for i in range(len(ret1)):\n",
@@ -164,12 +173,21 @@
     "        \n",
     "    # Convolution 2\n",
     "    ret2 = []\n",
+    "    S2C3 = {\n",
+    "        0: [ 0,  4,  5,  6,  9, 10, 11, 12, 14, 15],\n",
+    "        1: [ 0,  1,  5,  6,  7, 10, 11, 12, 13, 15],\n",
+    "        2: [ 0,  1,  2,  6,  7,  8, 11, 13, 14, 15],\n",
+    "        3: [ 1,  2,  3,  6,  7,  8,  9, 12, 14, 15],\n",
+    "        4: [ 2,  3,  4,  7,  8,  9, 10, 12, 13, 15],\n",
+    "        5: [ 3,  4,  5,  8,  9, 10, 11, 13, 14, 15],\n",
+    "    }\n",
     "    for i in range(len(conv[1][0])):\n",
     "        tmp = np.zeros((len(ret1[0]) - 2*(len(conv[1][0][i])//2), len(ret1[0][0]) - 2*(len(conv[1][0][i])//2)))\n",
     "        for j in range(len(conv[1])):\n",
-    "            tmp += convolve(ret1[j], conv[1][j][i])\n",
+    "            if i in S2C3[j]:\n",
+    "                tmp += convolve(ret1[j], conv[1][j][i])\n",
     "        tmp +=  bConv[1][i]\n",
-    "        ret2.append(np.tanh(tmp))\n",
+    "        ret2.append(A*np.tanh(2*tmp/3))\n",
     "        \n",
     "    # Average pooling\n",
     "    for i in range(len(ret2)):\n",
@@ -182,7 +200,7 @@
     "        for j in range(len(conv[2])):\n",
     "            tmp += convolve(ret2[j], conv[2][j][i])\n",
     "        tmp +=  bConv[2][i]\n",
-    "        ret3.append(np.tanh(tmp))\n",
+    "        ret3.append(A*np.tanh(2*tmp/3))\n",
     "    \n",
     "    # Fully connected 1\n",
     "    ret4 = []\n",
@@ -191,7 +209,7 @@
     "        for j in range(len(w1)):\n",
     "            tmp += w1[j][i]*ret3[j]\n",
     "        tmp += b1[i]\n",
-    "        ret4.append(np.tanh(tmp))\n",
+    "        ret4.append(A*np.tanh(2*tmp/3))\n",
     "\n",
     "    # Fully connected 2\n",
     "    ret5 = []\n",
@@ -213,35 +231,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 174,
    "id": "israeli-street",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[8.12105631e-04]],\n",
+       "array([[[7.04358871e-02]],\n",
        "\n",
-       "       [[3.57604781e-04]],\n",
+       "       [[2.00541653e-04]],\n",
        "\n",
-       "       [[6.13633186e-03]],\n",
+       "       [[3.39001579e-02]],\n",
        "\n",
-       "       [[3.72366435e-04]],\n",
+       "       [[8.91314535e-01]],\n",
        "\n",
-       "       [[4.55388423e-03]],\n",
+       "       [[4.97197160e-04]],\n",
        "\n",
-       "       [[5.68131816e-04]],\n",
+       "       [[6.03608054e-09]],\n",
        "\n",
-       "       [[2.86900674e-03]],\n",
+       "       [[2.20042868e-04]],\n",
        "\n",
-       "       [[1.80113999e-04]],\n",
+       "       [[1.83161499e-03]],\n",
        "\n",
-       "       [[1.63881599e-03]],\n",
+       "       [[9.86302120e-04]],\n",
        "\n",
-       "       [[9.82511639e-01]]])"
+       "       [[6.13714807e-04]]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 174,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,14 +267,6 @@
    "source": [
     "forward(xTrain[0])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "numerical-inside",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -275,7 +285,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
