--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 233,
    "id": "listed-diana",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 234,
    "id": "successful-treasurer",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 235,
    "id": "correct-benefit",
    "metadata": {},
    "outputs": [],
@@ -53,14 +53,14 @@
     "    ret = (np.zeros((size[0] - 2*(kernelSize//2), size[1] - 2*(kernelSize//2))))\n",
     "    for i in range(kernelSize//2, size[0] - kernelSize//2):\n",
     "        for j in range(kernelSize//2, size[1] - kernelSize//2):\n",
-    "            ret[i - kernelSize//2][j - kernelSize//2] = np.sum(np.dot(kernel,im[i-kernelSize//2:i-kernelSize//2+kernelSize,j-kernelSize//2:j-kernelSize//2+kernelSize]))\n",
+    "            ret[i - kernelSize//2][j - kernelSize//2] = np.sum(np.multiply(kernel,im[i-kernelSize//2:i-kernelSize//2+kernelSize,j-kernelSize//2:j-kernelSize//2+kernelSize]))\n",
     "    ret = ret + bias\n",
     "    return ret"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 236,
    "id": "attempted-utility",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 237,
    "id": "defensive-grenada",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 238,
    "id": "cef19200",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 239,
    "id": "developing-fraud",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 240,
    "id": "heated-albany",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 241,
    "id": "active-reggae",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 242,
    "id": "personalized-screw",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 243,
    "id": "abroad-pontiac",
    "metadata": {},
    "outputs": [],
@@ -173,19 +173,11 @@
     "        \n",
     "    # Convolution 2\n",
     "    ret2 = []\n",
-    "    S2C3 = {\n",
-    "        0: [ 0,  4,  5,  6,  9, 10, 11, 12, 14, 15],\n",
-    "        1: [ 0,  1,  5,  6,  7, 10, 11, 12, 13, 15],\n",
-    "        2: [ 0,  1,  2,  6,  7,  8, 11, 13, 14, 15],\n",
-    "        3: [ 1,  2,  3,  6,  7,  8,  9, 12, 14, 15],\n",
-    "        4: [ 2,  3,  4,  7,  8,  9, 10, 12, 13, 15],\n",
-    "        5: [ 3,  4,  5,  8,  9, 10, 11, 13, 14, 15],\n",
-    "    }\n",
+    "    S2C3 = {0: [0, 1, 2], 1: [1, 2, 3], 2: [2, 3, 4], 3: [3, 4, 5], 4: [0, 4, 5], 5: [0, 1, 5], 6: [0, 1, 2, 3], 7: [1, 2, 3, 4], 8: [2, 3, 4, 5], 9: [0, 3, 4, 5], 10: [0, 1, 4, 5], 11: [0, 1, 2, 5], 12: [0, 1, 3, 4], 13: [1, 2, 4, 5], 14: [0, 2, 3, 5], 15: [0, 1, 2, 3, 4, 5]}\n",
     "    for i in range(len(conv[1][0])):\n",
     "        tmp = np.zeros((len(ret1[0]) - 2*(len(conv[1][0][i])//2), len(ret1[0][0]) - 2*(len(conv[1][0][i])//2)))\n",
-    "        for j in range(len(conv[1])):\n",
-    "            if i in S2C3[j]:\n",
-    "                tmp += convolve(ret1[j], conv[1][j][i])\n",
+    "        for j in S2C3[i]:\n",
+    "            tmp += convolve(ret1[j], conv[1][j][i])\n",
     "        tmp +=  bConv[1][i]\n",
     "        ret2.append(A*np.tanh(2*tmp/3))\n",
     "        \n",
@@ -231,41 +223,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 244,
    "id": "israeli-street",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[7.04358871e-02]],\n",
+       "array([[[0.00877065]],\n",
        "\n",
-       "       [[2.00541653e-04]],\n",
+       "       [[0.00158947]],\n",
        "\n",
-       "       [[3.39001579e-02]],\n",
+       "       [[0.63881999]],\n",
        "\n",
-       "       [[8.91314535e-01]],\n",
+       "       [[0.22765145]],\n",
        "\n",
-       "       [[4.97197160e-04]],\n",
+       "       [[0.00073055]],\n",
        "\n",
-       "       [[6.03608054e-09]],\n",
+       "       [[0.11153667]],\n",
        "\n",
-       "       [[2.20042868e-04]],\n",
+       "       [[0.00115378]],\n",
        "\n",
-       "       [[1.83161499e-03]],\n",
+       "       [[0.00547066]],\n",
        "\n",
-       "       [[9.86302120e-04]],\n",
+       "       [[0.00346896]],\n",
        "\n",
-       "       [[6.13714807e-04]]])"
+       "       [[0.00080782]]])"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "forward(xTrain[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42adc9a6",
+   "metadata": {},
+   "source": [
+    "# BackProp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "id": "db08175e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: [0, 1, 2], 1: [1, 2, 3], 2: [2, 3, 4], 3: [3, 4, 5], 4: [0, 4, 5], 5: [0, 1, 5], 6: [0, 1, 2, 3], 7: [1, 2, 3, 4], 8: [2, 3, 4, 5], 9: [0, 3, 4, 5], 10: [0, 1, 4, 5], 11: [0, 1, 2, 5], 12: [0, 1, 3, 4], 13: [1, 2, 4, 5], 14: [0, 2, 3, 5], 15: [0, 1, 2, 3, 4, 5]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "S2C3 = {\n",
+    "        0: [ 0,  4,  5,  6,  9, 10, 11, 12, 14, 15],\n",
+    "        1: [ 0,  1,  5,  6,  7, 10, 11, 12, 13, 15],\n",
+    "        2: [ 0,  1,  2,  6,  7,  8, 11, 13, 14, 15],\n",
+    "        3: [ 1,  2,  3,  6,  7,  8,  9, 12, 14, 15],\n",
+    "        4: [ 2,  3,  4,  7,  8,  9, 10, 12, 13, 15],\n",
+    "        5: [ 3,  4,  5,  8,  9, 10, 11, 13, 14, 15],\n",
+    "    }\n",
+    "flip = {}\n",
+    "for i in range(16):\n",
+    "    flip[i] = []\n",
+    "for i in S2C3:\n",
+    "    for j in S2C3[i]:\n",
+    "        flip[j].append(i)\n",
+    "\n",
+    "print(flip)"
    ]
   }
  ],
