--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 1,
    "id": "listed-diana",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 2,
    "id": "successful-treasurer",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 3,
    "id": "correct-benefit",
    "metadata": {},
    "outputs": [],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 4,
    "id": "attempted-utility",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 5,
    "id": "defensive-grenada",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 6,
    "id": "cef19200",
    "metadata": {},
    "outputs": [],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 7,
    "id": "developing-fraud",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 8,
    "id": "heated-albany",
    "metadata": {},
    "outputs": [],
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 9,
    "id": "active-reggae",
    "metadata": {},
    "outputs": [],
@@ -140,11 +140,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 24,
    "id": "personalized-screw",
    "metadata": {},
    "outputs": [],
    "source": [
+    "S2C3 = { 0: [0, 1, 2], \n",
+    "         1: [1, 2, 3], \n",
+    "         2: [2, 3, 4], \n",
+    "         3: [3, 4, 5], \n",
+    "         4: [0, 4, 5], \n",
+    "         5: [0, 1, 5], \n",
+    "         6: [0, 1, 2, 3], \n",
+    "         7: [1, 2, 3, 4], \n",
+    "         8: [2, 3, 4, 5], \n",
+    "         9: [0, 3, 4, 5], \n",
+    "        10: [0, 1, 4, 5], \n",
+    "        11: [0, 1, 2, 5], \n",
+    "        12: [0, 1, 3, 4], \n",
+    "        13: [1, 2, 4, 5], \n",
+    "        14: [0, 2, 3, 5], \n",
+    "        15: [0, 1, 2, 3, 4, 5]}\n",
     "conv = [(np.random.rand(6, 5, 5)), (np.random.rand(6, 16, 5, 5)), (np.random.rand(16, 120, 5, 5))]\n",
     "bConv = [(np.random.rand(6)), (np.random.rand(16)), (np.random.rand(120))]\n",
     "w1 = np.random.rand(120, 84)\n",
@@ -155,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 27,
    "id": "abroad-pontiac",
    "metadata": {},
    "outputs": [],
@@ -173,7 +189,6 @@
     "        \n",
     "    # Convolution 2\n",
     "    ret2 = []\n",
-    "    S2C3 = {0: [0, 1, 2], 1: [1, 2, 3], 2: [2, 3, 4], 3: [3, 4, 5], 4: [0, 4, 5], 5: [0, 1, 5], 6: [0, 1, 2, 3], 7: [1, 2, 3, 4], 8: [2, 3, 4, 5], 9: [0, 3, 4, 5], 10: [0, 1, 4, 5], 11: [0, 1, 2, 5], 12: [0, 1, 3, 4], 13: [1, 2, 4, 5], 14: [0, 2, 3, 5], 15: [0, 1, 2, 3, 4, 5]}\n",
     "    for i in range(len(conv[1][0])):\n",
     "        tmp = np.zeros((len(ret1[0]) - 2*(len(conv[1][0][i])//2), len(ret1[0][0]) - 2*(len(conv[1][0][i])//2)))\n",
     "        for j in S2C3[i]:\n",
@@ -213,9 +228,7 @@
     "        ret5.append(tmp)\n",
     "    \n",
     "    # Softmax activation\n",
-    "    expSum = 0\n",
-    "    for i in range(len(ret5)):\n",
-    "        expSum += math.exp(ret5[i])\n",
+    "    expSum = np.sum(np.exp(ret5))\n",
     "    ret5 = np.exp(ret5)/expSum\n",
     "    \n",
     "    return ret5"
@@ -223,35 +236,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 29,
    "id": "israeli-street",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[0.00877065]],\n",
+       "array([[[1.08888025e-05]],\n",
        "\n",
-       "       [[0.00158947]],\n",
+       "       [[1.52597485e-05]],\n",
        "\n",
-       "       [[0.63881999]],\n",
+       "       [[2.80178639e-03]],\n",
        "\n",
-       "       [[0.22765145]],\n",
+       "       [[2.02280316e-01]],\n",
        "\n",
-       "       [[0.00073055]],\n",
+       "       [[5.12290340e-01]],\n",
        "\n",
-       "       [[0.11153667]],\n",
+       "       [[2.63636961e-05]],\n",
        "\n",
-       "       [[0.00115378]],\n",
+       "       [[1.48423712e-04]],\n",
        "\n",
-       "       [[0.00547066]],\n",
+       "       [[1.36188144e-03]],\n",
        "\n",
-       "       [[0.00346896]],\n",
+       "       [[2.15309262e-03]],\n",
        "\n",
-       "       [[0.00080782]]])"
+       "       [[2.78911648e-01]]])"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,36 +283,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
-   "id": "db08175e",
+   "execution_count": null,
+   "id": "offensive-midnight",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: [0, 1, 2], 1: [1, 2, 3], 2: [2, 3, 4], 3: [3, 4, 5], 4: [0, 4, 5], 5: [0, 1, 5], 6: [0, 1, 2, 3], 7: [1, 2, 3, 4], 8: [2, 3, 4, 5], 9: [0, 3, 4, 5], 10: [0, 1, 4, 5], 11: [0, 1, 2, 5], 12: [0, 1, 3, 4], 13: [1, 2, 4, 5], 14: [0, 2, 3, 5], 15: [0, 1, 2, 3, 4, 5]}\n"
-     ]
-    }
-   ],
-   "source": [
-    "S2C3 = {\n",
-    "        0: [ 0,  4,  5,  6,  9, 10, 11, 12, 14, 15],\n",
-    "        1: [ 0,  1,  5,  6,  7, 10, 11, 12, 13, 15],\n",
-    "        2: [ 0,  1,  2,  6,  7,  8, 11, 13, 14, 15],\n",
-    "        3: [ 1,  2,  3,  6,  7,  8,  9, 12, 14, 15],\n",
-    "        4: [ 2,  3,  4,  7,  8,  9, 10, 12, 13, 15],\n",
-    "        5: [ 3,  4,  5,  8,  9, 10, 11, 13, 14, 15],\n",
-    "    }\n",
-    "flip = {}\n",
-    "for i in range(16):\n",
-    "    flip[i] = []\n",
-    "for i in S2C3:\n",
-    "    for j in S2C3[i]:\n",
-    "        flip[j].append(i)\n",
-    "\n",
-    "print(flip)"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -318,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
