first attempt at backprop

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -75,6 +75,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "covered-vienna",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def softmax(a):\n",
+    "    expSum = np.sum(np.exp(a))\n",
+    "    return np.exp(a)/expSum"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "id": "defensive-grenada",
    "metadata": {},
@@ -161,6 +173,9 @@
     "        13: [1, 2, 4, 5], \n",
     "        14: [0, 2, 3, 5], \n",
     "        15: [0, 1, 2, 3, 4, 5]}\n",
+    "A = 1.7159\n",
+    "S = 2 / 3\n",
+    "\n",
     "conv = [(np.random.rand(6, 5, 5)), (np.random.rand(6, 16, 5, 5)), (np.random.rand(16, 120, 5, 5))]\n",
     "bConv = [(np.random.rand(6)), (np.random.rand(16)), (np.random.rand(120))]\n",
     "w1 = np.random.rand(120, 84)\n",
@@ -177,11 +192,10 @@
    "outputs": [],
    "source": [
     "def forward(im):\n",
-    "    A = 1.7159\n",
     "    # Convolution 1\n",
     "    ret1 = []\n",
     "    for i in range(len(conv[0])):\n",
-    "        ret1.append(A*np.tanh(2*convolve(im, conv[0][i], bConv[0][i])/3))\n",
+    "        ret1.append(A*np.tanh(S * convolve(im, conv[0][i], bConv[0][i])))\n",
     "        \n",
     "    # Average pooling\n",
     "    for i in range(len(ret1)):\n",
@@ -194,7 +208,7 @@
     "        for j in S2C3[i]:\n",
     "            tmp += convolve(ret1[j], conv[1][j][i])\n",
     "        tmp +=  bConv[1][i]\n",
-    "        ret2.append(A*np.tanh(2*tmp/3))\n",
+    "        ret2.append(A*np.tanh(S * tmp))\n",
     "        \n",
     "    # Average pooling\n",
     "    for i in range(len(ret2)):\n",
@@ -207,7 +221,7 @@
     "        for j in range(len(conv[2])):\n",
     "            tmp += convolve(ret2[j], conv[2][j][i])\n",
     "        tmp +=  bConv[2][i]\n",
-    "        ret3.append(A*np.tanh(2*tmp/3))\n",
+    "        ret3.append(A*np.tanh(S * tmp))\n",
     "    \n",
     "    # Fully connected 1\n",
     "    ret4 = []\n",
@@ -216,7 +230,7 @@
     "        for j in range(len(w1)):\n",
     "            tmp += w1[j][i]*ret3[j]\n",
     "        tmp += b1[i]\n",
-    "        ret4.append(A*np.tanh(2*tmp/3))\n",
+    "        ret4.append(A*np.tanh(S * tmp))\n",
     "\n",
     "    # Fully connected 2\n",
     "    ret5 = []\n",
@@ -270,7 +284,7 @@
     }
    ],
    "source": [
-    "forward(xTrain[0])"
+    "final = forward(xTrain[0])"
    ]
   },
   {
@@ -287,7 +301,48 @@
    "id": "offensive-midnight",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def backFlatLast(W, b, aL_1, aL, y):\n",
+    "    dW = np.zeros(W.shape)\n",
+    "    db = np.zeros(aL.shape)\n",
+    "    delta = np.zeros(aL_1.shape)\n",
+    "    \n",
+    "    for i in range(len(W)):\n",
+    "        for j in range(len(W[0])):\n",
+    "            expSum = np.sum(np.exp(ret5))\n",
+    "            dW[i][j] = (aL[j] - y[j]) * aL_1[i] * ((expSum - np.exp(aL[j])) / (expSum ** 2)) * np.exp(aL[j])\n",
+    "    \n",
+    "    for i in range(len(aL)):\n",
+    "        expSum = np.sum(np.exp(ret5))\n",
+    "        db[i] = (aL[i] - y[i]) * (expSum - np.exp(aL[i])) / (expSum ** 2) * np.exp(aL[i])\n",
+    "    \n",
+    "    for i in range(len(W)):\n",
+    "        for j in range(len(W[0])):\n",
+    "            delta[i] += W[i][j] * (aL[j] - y[j]) * (expSum - np.exp(aL[j])) / (expSum ** 2) * np.exp(aL[j])\n",
+    "    return dW, db, delta\n",
+    "\n",
+    "def backFlat(W, b, aL_1, aL, d):\n",
+    "    dW = np.zeros(W.shape)\n",
+    "    db = np.zeros(aL.shape)\n",
+    "    delta = np.zeros(aL_1.shape)\n",
+    "\n",
+    "    for i in range(len(W)):\n",
+    "        for j in range(len(W[0])):\n",
+    "            dW[i][j] = d[j] * (1 - (np.tanh(aL[j]) ** 2)) * S * aL_1[i]\n",
+    "    \n",
+    "    for i in range(len(aL)):\n",
+    "        db[i] = d[i] * (1 - (np.tanh(aL[i]) ** 2)) * S\n",
+    "    \n",
+    "    for i in range(len(W)):\n",
+    "        for j in range(len(W[0])):\n",
+    "            delta[i] += W[i][j] * d[j] * (1 - (np.tanh(aL[j]) ** 2)) * S\n",
+    "    \n",
+    "    return dW, db, delta\n",
+    "\n",
+    "\n",
+    "\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
