--- a/Comparison_with_Other_Classifiers.ipynb
+++ b/Comparison_with_Other_Classifiers.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "name": "Comparison with Other Classifiers.ipynb",
-      "provenance": []
+      "provenance": [],
+      "collapsed_sections": []
     },
     "kernelspec": {
       "name": "python3",
@@ -23,12 +24,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dMjLix5Tg_Rj",
-        "outputId": "4d73575c-b356-4ecc-f7de-89effe1eb876"
+        "outputId": "84f9d16e-32db-414f-8f85-01916596e46b"
       },
       "source": [
         "!pip install python-mnist"
       ],
-      "execution_count": 23,
+      "execution_count": 53,
       "outputs": [
         {
           "output_type": "stream",
@@ -48,7 +49,7 @@
         "from mnist.loader import MNIST\n",
         "import pandas as pd"
       ],
-      "execution_count": 24,
+      "execution_count": 54,
       "outputs": []
     },
     {
@@ -65,7 +66,7 @@
         "  corr /= len(y_true)\n",
         "  return corr*100"
       ],
-      "execution_count": 25,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -81,7 +82,7 @@
         "    return imagesTrain, labelsTrain, imagesTest, labelsTest\n",
         "X_train, y_train, X_test, y_test = loadMNIST()"
       ],
-      "execution_count": 26,
+      "execution_count": 56,
       "outputs": []
     },
     {
@@ -96,7 +97,7 @@
         "    model = model.fit(X_train, y_train)\n",
         "    return Accuracy(model.predict(X_test), y_test)"
       ],
-      "execution_count": 27,
+      "execution_count": 57,
       "outputs": []
     },
     {
@@ -107,11 +108,55 @@
       "source": [
         "from sklearn.neighbors import KNeighborsClassifier\n",
         "def Baseline_Nearest_Neighbor_Classifer():\n",
-        "    model = KNeighborsClassifier()\n",
+        "    # k=3 was picked from the paper \n",
+        "    # sklearn's defualt is 5\n",
+        "    model = KNeighborsClassifier(n_neighbors=3)\n",
         "    model = model.fit(X_train, y_train)\n",
         "    return Accuracy(model.predict(X_test), y_test)"
       ],
-      "execution_count": 28,
+      "execution_count": 58,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RTBHulyH7fma"
+      },
+      "source": [
+        "from sklearn.decomposition import PCA\n",
+        "from sklearn.preprocessing import PolynomialFeatures\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "def Principal_Component_Analysis_and_Polynomial_Classifier():\n",
+        "    # Convert 28*28 dim to 40\n",
+        "    # used to train a 2nd degree polynomial Classifer\n",
+        "    pca = PCA(n_components=40).fit(X_train)\n",
+        "    poly = PolynomialFeatures(2)\n",
+        "    X_train_updated = poly.fit_transform(pca.transform(X_train))\n",
+        "    X_test_updated = poly.transform(pca.transform(X_test))\n",
+        "    model = LogisticRegression(random_state=0, max_iter=1000)\n",
+        "    model = model.fit(X_train_updated, y_train)\n",
+        "    return Accuracy(model.predict(X_test_updated), y_test)"
+      ],
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XvOSD5c0sLo3"
+      },
+      "source": [
+        "models = [\"Linear_Classifier_and_Pairwise_Linear_Classifier\", \"Baseline_Nearest_Neighbor_Classifer\", \n",
+        "          \"Principal_Component_Analysis_and_Polynomial_Classifier\"]\n",
+        "names, acc = [], []\n",
+        "for i in models:\n",
+        "    names.append(\" \".join(i.split(\"_\")))\n",
+        "    acc.append(eval(i + \"()\"))\n",
+        "df = pd.DataFrame()\n",
+        "df[\"Models\"] = names\n",
+        "df[\"Accuracies\"] = acc"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -119,38 +164,16 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 258
+          "height": 144
         },
-        "id": "XvOSD5c0sLo3",
-        "outputId": "400cf25e-2cfa-40e4-ba8d-7236c4477a90"
+        "id": "3C4_mhUr-BSq",
+        "outputId": "1e6d59e2-b64f-4646-9ab1-5ef4aaad1ffb"
       },
       "source": [
-        "models = [\"Linear_Classifier_and_Pairwise_Linear_Classifier\", \"Baseline_Nearest_Neighbor_Classifer\"]\n",
-        "names, acc = [], []\n",
-        "for i in models:\n",
-        "    names.append(\" \".join(i.split(\"_\")))\n",
-        "    acc.append(eval(i + \"()\"))\n",
-        "df = pd.DataFrame()\n",
-        "df[\"Models\"] = names\n",
-        "df[\"Accuracies\"] = acc\n",
         "df"
       ],
-      "execution_count": 29,
+      "execution_count": 61,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/linear_model/_logistic.py:818: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG,\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
@@ -186,20 +209,26 @@
               "    <tr>\n",
               "      <th>1</th>\n",
               "      <td>Baseline Nearest Neighbor Classifer</td>\n",
-              "      <td>94.251667</td>\n",
+              "      <td>94.283333</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Principal Component Analysis and Polynomial Cl...</td>\n",
+              "      <td>95.143333</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                                             Models  Accuracies\n",
-              "0  Linear Classifier and Pairwise Linear Classifier   85.881667\n",
-              "1               Baseline Nearest Neighbor Classifer   94.251667"
+              "                                              Models  Accuracies\n",
+              "0   Linear Classifier and Pairwise Linear Classifier   85.881667\n",
+              "1                Baseline Nearest Neighbor Classifer   94.283333\n",
+              "2  Principal Component Analysis and Polynomial Cl...   95.143333"
             ]
           },
           "metadata": {},
-          "execution_count": 29
+          "execution_count": 61
         }
       ]
     }
